--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,8 @@ classifiers =
 [options]
 packages =
     helpers
+    helpers.neerslag
+    helpers.layerbuilder
 install_requires =
     datetime>=4.3
     sklearn>=0.0
